更新设计报告，更新README研发日志部分，解决串口bug

--- a/Balance_leg_V2.ioc
+++ b/Balance_leg_V2.ioc
@@ -2,7 +2,18 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CORTEX_M7.IPParameters=default_mode_Activation
+CORTEX_M7.AccessPermission_Spec=MPU_REGION_FULL_ACCESS
+CORTEX_M7.BaseAddress_Spec=0x24000000
+CORTEX_M7.CPU_DCache=Enabled
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.DisableExec_Spec=MPU_INSTRUCTION_ACCESS_ENABLE
+CORTEX_M7.IPParameters=default_mode_Activation,CPU_DCache,CPU_ICache,IsBufferable_Spec,IsCacheable_Spec,DisableExec_Spec,IsShareable_Spec,BaseAddress_Spec,SubRegionDisable_Spec,TypeExtField_Spec,AccessPermission_Spec,Size_Spec
+CORTEX_M7.IsBufferable_Spec=MPU_ACCESS_BUFFERABLE
+CORTEX_M7.IsCacheable_Spec=MPU_ACCESS_CACHEABLE
+CORTEX_M7.IsShareable_Spec=MPU_ACCESS_SHAREABLE
+CORTEX_M7.Size_Spec=MPU_REGION_SIZE_512KB
+CORTEX_M7.SubRegionDisable_Spec=0x00
+CORTEX_M7.TypeExtField_Spec=MPU_TEX_LEVEL1
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=USART10_RX
 Dma.Request1=USART2_RX
@@ -133,7 +144,7 @@ Dma.USART10_RX.0.Mode=DMA_NORMAL
 Dma.USART10_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART10_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART10_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART10_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.USART10_RX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.USART10_RX.0.RequestNumber=1
 Dma.USART10_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
 Dma.USART10_RX.0.SignalID=NONE
@@ -317,16 +328,16 @@ Mcu.UserName=STM32H723VGTx
 MxCube.Version=6.12.1
 MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream5_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream7_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream1_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.FDCAN1_IT0_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.FDCAN2_IT0_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
@@ -342,14 +353,18 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART7_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART9_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.UART9_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART10_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
-NVIC.USART3_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Speed
+PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
 PA0.Mode=Asynchronous
 PA0.Signal=UART4_TX
+PA1.GPIOParameters=GPIO_Speed
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA1.Locked=true
 PA1.Mode=Asynchronous
 PA1.Signal=UART4_RX
@@ -370,9 +385,13 @@ PC14-OSC32_IN.GPIOParameters=PinState
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.PinState=GPIO_PIN_SET
 PC14-OSC32_IN.Signal=GPIO_Output
+PC6.GPIOParameters=GPIO_Speed
+PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
+PC7.GPIOParameters=GPIO_Speed
+PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC7.Locked=true
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
@@ -386,9 +405,13 @@ PD12.Signal=FDCAN3_RX
 PD13.Locked=true
 PD13.Mode=FDCAN_Activate
 PD13.Signal=FDCAN3_TX
+PD14.GPIOParameters=GPIO_Speed
+PD14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD14.Locked=true
 PD14.Mode=Asynchronous
 PD14.Signal=UART9_RX
+PD15.GPIOParameters=GPIO_Speed
+PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Locked=true
 PD15.Mode=Asynchronous
 PD15.Signal=UART9_TX
@@ -437,16 +460,20 @@ PE15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_Speed
-PE2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE2.Mode=Asynchronous
 PE2.Signal=USART10_RX
 PE3.GPIOParameters=GPIO_Speed
-PE3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PE3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE3.Mode=Asynchronous
 PE3.Signal=USART10_TX
+PE7.GPIOParameters=GPIO_Speed
+PE7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE7.Locked=true
 PE7.Mode=Asynchronous
 PE7.Signal=UART7_RX
+PE8.GPIOParameters=GPIO_Speed
+PE8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
@@ -471,7 +498,7 @@ ProjectManager.DeviceId=STM32H723VGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
